<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rebrand_neutral_0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_input_layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_article_search_field"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/text_input_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/search_input_required"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/rebrand_neutral_400"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_article_chip_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/rebrand_primary_500" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_most_searched_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/most_searched_keyword"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_search"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_search" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_most_searched_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_most_searched_keyword">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_most_searched_keyword1"
                style="@style/RectangleChoiceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                app:chipCornerRadius="60dp"
                app:ensureMinTouchTargetSize="false"
                tools:text="#근장" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_most_searched_keyword2"
                style="@style/RectangleChoiceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                app:chipCornerRadius="60dp"
                app:ensureMinTouchTargetSize="false"
                tools:text="#근로장학" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_most_searched_keyword3"
                style="@style/RectangleChoiceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                app:chipCornerRadius="60dp"
                app:ensureMinTouchTargetSize="false"
                tools:text="#장학" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_most_searched_keyword4"
                style="@style/RectangleChoiceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                app:chipCornerRadius="60dp"
                app:ensureMinTouchTargetSize="false"
                tools:text="#수강신청" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_most_searched_keyword5"
                style="@style/RectangleChoiceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                app:chipCornerRadius="60dp"
                app:ensureMinTouchTargetSize="false"
                tools:text="#한맥제" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/text_recent_searched_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/recent_searched_keyword"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_search"
            app:layout_constraintTop_toBottomOf="@id/chip_group_most_searched_keyword" />

        <TextView
            android:id="@+id/text_view_recent_searched_keyword_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/clear_all"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/text_recent_searched_keyword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_recent_searched_keyword" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_recent_searched_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_recent_searched_keyword"
            tools:itemCount="5"
            tools:listitem="@layout/item_recent_searched_history" />

        <FrameLayout
            android:id="@+id/frame_layout_search_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_search">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_search_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <LinearLayout
                android:id="@+id/text_view_search_result_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipChildren="false">

                    <ImageView
                        android:layout_width="95dp"
                        android:layout_height="75dp"
                        android:layout_gravity="bottom|end"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_bcsd_logo_symbol_sleep" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="top|start"
                        android:layout_marginStart="-2dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_sleep_z" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/empty_search_result"
                    android:textAlignment="center"
                    android:textColor="@color/rebrand_neutral_500"
                    android:textSize="14sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/rebrand_primary_800"
                android:visibility="gone" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>