<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rebrand_neutral_0">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_article_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_layout_underline"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="@color/rebrand_primary_800"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/rebrand_primary_600"
            app:tabTextColor="@color/rebrand_neutral_500">

        </com.google.android.material.tabs.TabLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view_article_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_article_board">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll_view_article_keywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadingEdgeLength="25dp"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="16dp"
                    android:requiresFadingEdge="horizontal"
                    android:scrollbars="none"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linear_layout_article_keywords"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_view_to_search_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_chip_search" />

                        <ImageView
                            android:id="@+id/image_view_to_keyword_add_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_chip_icon" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_group_my_keywords"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:chipSpacingHorizontal="8dp"
                            app:selectionRequired="true"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_see_all"
                                style="@style/ArticleChoiceChip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/see_all_article"
                                app:chipCornerRadius="60dp"
                                app:ensureMinTouchTargetSize="false" />

                        </com.google.android.material.chip.ChipGroup>
                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:id="@+id/text_view_empty_articles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view_article_keywords">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipChildren="false">

                        <ImageView
                            android:layout_width="95dp"
                            android:layout_height="75dp"
                            android:layout_gravity="bottom|end"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/ic_bcsd_logo_symbol_sleep" />

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_gravity="top|start"
                            android:layout_marginStart="-2dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/ic_sleep_z" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/empty_articles"
                        android:textAlignment="center"
                        android:textColor="@color/rebrand_neutral_500"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_article_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view_article_keywords"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_article_header" />

                <TextView
                    android:id="@+id/text_view_previous_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="6dp"
                    android:text="@string/previous_page"
                    app:layout_constraintBottom_toBottomOf="@id/chip_group_article_page"
                    app:layout_constraintEnd_toStartOf="@id/chip_group_article_page"
                    app:layout_constraintTop_toTopOf="@id/chip_group_article_page" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_article_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="32dp"
                    app:chipSpacingHorizontal="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_article_list"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_page1"
                        style="@style/ArticlePageChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        app:chipCornerRadius="6dp"
                        app:ensureMinTouchTargetSize="false"
                        tools:text="1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_page2"
                        style="@style/ArticlePageChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipCornerRadius="6dp"
                        app:ensureMinTouchTargetSize="false"
                        tools:text="2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_page3"
                        style="@style/ArticlePageChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipCornerRadius="6dp"
                        app:ensureMinTouchTargetSize="false"
                        tools:text="3" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_page4"
                        style="@style/ArticlePageChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipCornerRadius="6dp"
                        app:ensureMinTouchTargetSize="false"
                        tools:text="4" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_page5"
                        style="@style/ArticlePageChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipCornerRadius="6dp"
                        app:ensureMinTouchTargetSize="false"
                        tools:text="5" />

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/text_view_next_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="6dp"
                    android:text="@string/next_page"
                    app:layout_constraintBottom_toBottomOf="@id/chip_group_article_page"
                    app:layout_constraintStart_toEndOf="@id/chip_group_article_page"
                    app:layout_constraintTop_toTopOf="@id/chip_group_article_page" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/rebrand_primary_800"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_article_board" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>